# url-shortner

./: .env  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
core/: settings.py
database/: __init__.py  connection.py  ddl.sql  migrate.py  utils.py
modules/: models.py  server.py  url_helper.py
tests/: conftest.py
tests/modules/: test_server.py
